# mlops

./: AI_USE.md  README.md
backend/: .gitignore  README.md  infer.py  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/domain/: model_ids.py
backend/app/services/: inference.py
backend/tests/: test_api.py  test_inference.py
docs/: CURRENT_RELEASE.md  FOSS_YOLO_MLOps_Master_Plan.md
docs/design/: frontend-product-shell.md
frontend/: README.md  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/datasets/: page.tsx
frontend/src/app/inference/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/system/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/components/: app-shell.test.tsx  app-shell.tsx  page-header.tsx  status-badge.tsx  workflow-card.tsx
frontend/src/components/datasets/: dataset-pages.test.tsx  dataset-table.tsx  validation-summary.tsx
frontend/src/components/inference/: detection-rail.test.tsx  detection-rail.tsx  inference-workspace.test.tsx  inference-workspace.tsx  inspection-viewport.tsx
frontend/src/components/models/: model-table.tsx
frontend/src/components/runs/: run-details.test.tsx  run-details.tsx  run-table.test.tsx  run-table.tsx
frontend/src/components/system/: system-page.test.tsx
frontend/src/lib/: mock-data.ts  mock-run.ts  navigation.ts  utils.test.ts
frontend/src/providers/: mock-state-provider.test.tsx  mock-state-provider.tsx
frontend/src/test/: setup.ts
(+7 files in other folders)
